Add options to minimize impact of JVM internals on benchmark results due resizing heap regions, memory allocations, revoking biased locks, etc.